# MIPS-Assembly-Simulator

./: .clang-format  .gitignore  01_core_instructions.md  02_pipeline.md  47_INSTRUCTIONS_VERIFICATION_REPORT.md  ARTEMIS_FIX_CONFIRMATION.md  ARTEMIS_OPTIMIZATION.md  ARTEMIS_SUBMISSION_CHECKLIST.md  ARTEMIS_TIMEOUT_FIX.md  CMakeLists-test.txt  CMakeLists.txt  DEVELOPMENT_HANDOVER_REPORT.md  DEVELOPMENT_HISTORY.md  DEVELOPMENT_REPORT.md  DEVELOPMENT_STATUS_REPORT.md  DOCUMENTATION_CLEANUP_REPORT.md  DOCUMENT_ORGANIZATION_REPORT.md  FINAL_CLANG_FORMAT_FIX.md  GUI_47_INSTRUCTIONS_COMPLETE_REPORT.md  GUI_BDD_DEVELOPMENT_SUMMARY.md  GUI_DEMO_PROGRAMS.md  GUI_IMGUI_PLAN.md  HANDOVER_SUMMARY.md  MIPS_SIMULATOR_COMPLETE_GUIDE.md  NEXT_DEVELOPER_QUICKSTART.md  QUICK_REFERENCE.md  README.md  README_NEW.md  SPRINT3_COMPLETION_REPORT.md  SPRINT5_PROGRESS_REPORT.md  actual_output.txt  check-artemis-ready.ps1  cli.cpp  current_output.txt  debug_exact_flow.asm  debug_first_150.asm  debug_first_few.asm  debug_hello_world.asm  debug_la_test.asm  debug_memory_load.asm  (+82 more)
asmtest/: HANDOVER.md  README_DEBUGGING.md  debug_addr_12.asm  debug_address_compare.asm  debug_all_labels_minimal.asm  debug_basic_lhi_llo.asm  debug_before_lb.asm  debug_combined_part1_part2.asm  debug_correct_addr.asm  debug_data_address.asm  debug_data_direct.asm  debug_data_first.asm  debug_data_label.asm  debug_data_simple.asm  debug_direct_memory.asm  debug_exact_failing_sequence.asm  debug_exact_match.asm  debug_exact_sequence.asm  debug_first_12.asm  debug_first_20.asm  debug_first_30_lines.asm  debug_first_35_lines.asm  debug_first_45_lines.asm  debug_first_60_lines.asm  debug_first_8.asm  debug_first_80_lines.asm  debug_format_test.asm  debug_hardcode.asm  debug_hardcoded_addr.asm  debug_instruction_count.asm  debug_instruction_count_simple.asm  debug_instruction_count_with_test.asm  debug_instruction_label.asm  debug_instructions_jump_problem.asm  debug_instructions_start.asm  debug_jal_test.asm  debug_la_instruction.asm  debug_la_jr.asm  debug_la_test.asm  debug_label_only.asm  (+116 more)
assignment/: report.md
build-headless/: .ninja_deps  .ninja_log  build.ninja
cli/: CMakeLists.txt  assemble_executor.cpp  assemble_executor.hpp  cli.cpp  cli.hpp  run_executor.cpp  run_executor.hpp
debug/: README.md  debug_pipeline.cpp  demo_decoder.cpp  test_gui_console.cpp
docs/: ATOMIC_DEVELOPMENT_SCENARIOS.md  ATOMIC_SCENARIOS_SUMMARY.md  BDD_DEVELOPMENT_WORKFLOW.md  CI_CD_BUILD_FIX_REPORT.md  CI_CD_RELEASE_MODE_FIX_REPORT.md  CONSOLE_TEST_COMPLETION_REPORT.md  CURRENT_PROJECT_STATUS_2025.md  DEVELOPMENT_CHECKLIST.md  DEVELOPMENT_HANDOVER_CHECKLIST.md  DEVELOPMENT_HANDOVER_REPORT.md  DEVELOPMENT_REQUIREMENTS_ANALYSIS.md  ESSENTIAL_DOCS_INDEX.md  EXTENDED_INSTRUCTIONS_FINAL_HANDOVER.md  EXTENDED_INSTRUCTIONS_HANDOVER_REPORT.md  FILE_ORGANIZATION_REPORT.md  FINAL_ITERATION_COMPLETION_REPORT.md  GUI_CONSOLE_ISSUE_RESOLUTION_REPORT.md  GUI_CONSOLE_TESTING_ANALYSIS.md  GUI_CONSOLE_TESTING_REPORT.md  HELLO_MIPS_IMPLEMENTATION_REPORT.md  IMPLEMENTATION_GUIDE.md  LOGICAL_INSTRUCTIONS_DEVELOPMENT_REPORT.md  LOGICAL_INSTRUCTIONS_HANDOVER_SUMMARY.md  LOGICAL_INSTRUCTIONS_IMPLEMENTATION_GUIDE.md  NEXT_STAGE_DEVELOPMENT_GUIDE.md  PHASE_1_5_SRA_DEVELOPMENT_GUIDE.md  PHASE_1_COMPLETION_REPORT.md  PHASE_2_IMMEDIATE_LOGICAL_GUIDE.md  PHASE_3.md  PHASE_3_COMPLETION_SUMMARY.md  PHASE_4.md  PHASE_4_DEVELOPMENT_GUIDE.md  PHASE_5_DEVELOPMENT_GUIDE.md  PHASE_6_DEVELOPMENT_GUIDE.md  PHASE_7_DEVELOPMENT_GUIDE.md  (+8 more)
features/: CMakeLists.txt  core_instructions.feature  extended_instructions.feature  gui_console_output.feature  gui_interface.feature  logical_and_minimal.feature  logical_assembler_support.feature  logical_instructions.feature  logical_instructions_atomic.feature  logical_instructions_atomic_new.feature  logical_instructions_walking_skeleton.feature  pipeline.feature  slt_instruction_only.feature  sltiu_instruction_only.feature  step_definitions.cpp  step_definitions_extended.cpp  step_definitions_logical.cpp  step_definitions_logical_minimal.cpp  syscalls_and_decoding.feature
src/: Assembler.cpp  Assembler.h  CMakeLists.txt  Cpu.cpp  Cpu.h  EXStage.cpp  EXStage.h  IDStage.cpp  IDStage.h  IFStage.cpp  IFStage.h  Instruction.cpp  Instruction.h  InstructionDecoder.cpp  InstructionDecoder.h  Instruction_refactored.h  MEMStage.cpp  MEMStage.h  Memory.cpp  Memory.h  MipsSimulatorAPI.cpp  MipsSimulatorAPI.h  RegisterFile.cpp  RegisterFile.h  Stage.cpp  Stage.h  WBStage.cpp  WBStage.h  artemis_main.cpp  gui_main.cpp  imgui.ini  imgui_main.cpp  main.cpp
src/gui/: ImGuiMipsSimulatorGUI.cpp  ImGuiMipsSimulatorGUI.h  MipsSimulatorGUI.cpp  MipsSimulatorGUI.h
src/tools/: clean_runner.cpp  cli_trace_runner.cpp  dump_labels.cpp  jal_debug_runner.cpp
tests/: CMakeLists.txt  test_addiu_instruction_bdd_minimal.cpp  test_addu_instruction_bdd_minimal.cpp  test_and_instruction.cpp  test_andi_instruction.cpp  test_andi_instruction_integration.cpp  test_assembler_debug.cpp  test_bdd_core_instructions.cpp  test_bgtz_instruction_bdd_minimal.cpp  test_bgtz_instruction_integration.cpp  test_blez_instruction_bdd_minimal.cpp  test_blez_instruction_bdd_minimal_clean.cpp  test_bne_instruction.cpp  test_character_syscalls.cpp  test_cli_argument_parsing.cpp  test_cli_assemble_command.cpp  test_cli_run_command.cpp  test_cpu.cpp  test_div_instruction_bdd_minimal.cpp  test_divu_instruction_bdd_minimal.cpp  test_enhanced_gui_console.cpp  test_extended_instructions_atomic.cpp  test_failing_segments.cpp  test_gui_console_output.cpp  test_gui_interface.cpp  test_hello_mips.cpp  test_instruction_decoder.cpp  test_jal_instruction_bdd_minimal.cpp  test_jal_jr_integration.cpp  test_jalr_instruction_bdd_minimal.cpp  test_jalr_instruction_bdd_minimal_fixed.cpp  test_jalr_instruction_bdd_minimal_v2.cpp  test_jalr_instruction_integration.cpp  test_jr_instruction_bdd_minimal.cpp  test_jr_instruction_integration.cpp  test_lb_instruction_bdd_minimal.cpp  test_lbu_instruction_bdd_minimal.cpp  test_lh_instruction_bdd_minimal.cpp  test_lhi_instruction.cpp  test_lhu_instruction_bdd_minimal.cpp  (+49 more)
(+90 files in other folders)
